feat(s3): 添加 Amazon S3 协议兼容对象存储模块
- 新增 AmazonS3ClientFactory 工厂类创建 S3 客户端和预签名客户端
- 实现 S3Service 服务类提供 S3 协议兼容的对象存储功能
- 添加 S3AutoConfig 自动配置类和 S3CompatibleStorageCondition 条件判断
- 创建 solomon-amazon-s3 模块并配置 AWS SDK 依赖
- 更新 BOS 和 COS 模块自动配置添加配置验证和启动时检查
- 新增 S3ServiceInputStreamTest 测试类验证分片上传流处理逻辑
- 添加 job 模块 README 文档说明 PowerJob 和 XXL-JOB 集成方案
- 实现 JobLogSanitizer 日志脱敏工具防止敏感信息泄露
- 添加 JobRegisterMode 和 JobRegisterFailureStrategy 枚举定义注册策略